@@ -388,8 +388,11 @@ public:
   {
     switch (settings.fill_mode) {
     case AirspaceRendererSettings::FillMode::DEFAULT:
-    case AirspaceRendererSettings::FillMode::PADDING:
       use_stencil = !IsAncientHardware();
+      break;
+
+    case AirspaceRendererSettings::FillMode::PADDING:
+      use_stencil = true;
       break;
 
     case AirspaceRendererSettings::FillMode::ALL:
